--- a/CSS/main.css
+++ b/CSS/main.css
@@ -25,6 +25,10 @@ h2,
   font-family: 'Raleway', sans-serif;
 }
 
+img {
+  display: block;
+}
+
 .container {
   max-width: 90%;
   margin: 0 auto;
@@ -37,6 +41,9 @@ h2,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 header {
@@ -47,14 +54,45 @@ header .header__logo {
   margin: 0 auto 0 0;
 }
 
+header .header__logo img {
+  max-width: 100%;
+}
+
 header .header__nav {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 3rem;
 }
 
 header .header__nav a {
   color: #070439;
+}
+
+@media only screen and (max-width: 1200px) {
+  /*Tablets [601px -> 1200px]*/
+  header {
+    margin: 2rem 0 0 0;
+  }
+  header .header__logo img {
+    width: 50%;
+  }
+  header .header__nav {
+    gap: 1rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  /*Big smartphones [426px -> 600px]*/
+}
+
+@media only screen and (max-width: 425px) {
+  /*Small smartphones [325px -> 425px]*/
+  header .header__nav a {
+    font-size: 0.6rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
