--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,14 +3,43 @@ header {
 
 	.header__logo {
 		margin: 0 auto 0 0;
+
+		img {
+			max-width: 100%;
+		}
 	}
 
 	.header__nav {
 		display: inline-flex;
+		align-items: center;
 		gap: 3rem;
 
 		a {
 			color: $primary-color;
 		}
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	/*Tablets [601px -> 1200px]*/
+	header {
+		margin: 2rem 0 0 0;
+		.header__logo {
+			img {
+				width: 50%;
+			}
+		}
+		.header__nav {
+			gap: 1rem;
+		}
+	}
+}
+@media only screen and (max-width: 600px) {
+	/*Big smartphones [426px -> 600px]*/
+}
+@media only screen and (max-width: 425px) {
+	/*Small smartphones [325px -> 425px]*/
+	header .header__nav a {
+		font-size: 0.6rem;
 	}
 }
