--- a/CSS/main.css
+++ b/CSS/main.css
@@ -29,6 +29,10 @@ img {
   display: block;
 }
 
+section {
+  margin: 4rem 0;
+}
+
 .container {
   max-width: 90%;
   margin: 0 auto;
@@ -41,9 +45,22 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+}
+
+.email {
+  display: block;
+  border: none;
+  outline: none;
+  text-indent: 1rem;
+}
+
+.cta {
+  font-size: 0.9rem;
+  border: none;
+  border-radius: 0.3rem;
+  padding: 0.6rem 1.6rem;
+  background-color: #3065f8;
+  color: #fff;
 }
 
 header {
@@ -94,5 +111,46 @@ header .header__nav a {
   header .header__nav a {
     font-size: 0.6rem;
   }
+}
+
+.text-container {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0 auto 0 0;
+}
+
+.text-container h1 {
+  max-width: 70%;
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+  margin: 0 0 2rem 0;
+}
+
+.text-container p {
+  max-width: 60%;
+  margin: 0 0 2rem 0;
+}
+
+.form-top {
+  max-width: 75%;
+}
+
+.form-top .email {
+  min-width: 50%;
+  font-size: 0.9rem;
+  border: 0.1rem solid #070439;
+  border-radius: 0.3rem;
+  padding: 0.5rem;
+  margin: 0 1rem 0 0;
+}
+
+.illustration {
+  max-width: 50%;
+  margin: 0 0 0 auto;
+}
+
+.illustration img {
+  max-width: 100%;
 }
 /*# sourceMappingURL=main.css.map */
