--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,6 +3,9 @@ $background-color1: #fff;
 $background-color2: hsl(240, 75%, 98%);
 $background-color3: hsl(238, 22%, 44%);
 $background-color4: hsl(243, 87%, 12%);
+$cta-background: hsl(224, 93%, 58%);
+
+$rounded: 0.3rem;
 
 // - Very Dark Blue: hsl(243, 87%, 12%)
 // - Desaturated Blue: hsl(238, 22%, 44%)
