--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,7 +1,9 @@
 // html {
 // }
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap');
+
 body {
+	box-sizing: border-box;
 	font-family: 'Open Sans', sans-serif;
 }
 
@@ -14,47 +16,55 @@ body {
 	padding: 0;
 	margin: 0;
 }
-
 a {
-	text-decoration: none;
-	font-family: 'Raleway', sans-serif;
+	color: $primary-color;
+}
+
+h1,
+h2 {
+	font-size: 2.5rem;
+	margin: 0 0 1rem 0;
+	padding: 0 5rem 0 0;
 }
 
 h1,
 h2,
-.cta {
+a {
 	font-family: 'Raleway', sans-serif;
 }
+
+p {
+	padding: 0 10rem 0 0;
+}
+
 img {
-	display: block;
+	width: 100%;
 }
 
-section {
-	margin: 4rem 0;
+input {
+	border-radius: $rounded;
+	border: none;
+	font-size: 0.9rem;
+	outline: none;
 }
 
-.container {
+.header__container,
+.header__nav,
+.sec1__container,
+.sec2__container,
+.sec3__container,
+.footer__container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	max-width: 90%;
 	margin: 0 auto;
 }
 
-.flex {
+.header__logo {
+	/*maybe move to header partial*/
+	display: block;
 	display: flex;
 	align-items: center;
-}
-
-.email {
-	display: block;
-	border: none;
-	outline: none;
-	text-indent: 1rem;
-}
-
-.cta {
-	font-size: 0.9rem;
-	border: none;
-	border-radius: $rounded;
-	padding: 0.6rem 1.6rem;
-	background-color: $cta-background;
-	color: #fff;
+	justify-content: center;
 }
