--- a/sass/_section-1.scss
+++ b/sass/_section-1.scss
@@ -1,35 +1,35 @@
-.text-container {
-	align-self: center;
-	margin: 0 auto 0 0;
+.sec1__form {
+	display: flex;
+	position: relative;
+	margin: 1rem 0 0 0;
+	// width: 10rem;
 
-	h1 {
-		max-width: 70%;
-		font-size: 2.5rem;
-		line-height: 3.5rem;
-		margin: 0 0 2rem 0;
-	}
-
-	p {
-		max-width: 60%;
-		margin: 0 0 2rem 0;
-	}
-}
-
-.form-top {
-	max-width: 75%;
 	.email {
-		min-width: 50%;
-		font-size: 0.9rem;
-		border: 0.1rem solid $primary-color;
-		border-radius: $rounded;
-		padding: 0.5rem;
+		text-indent: 1rem;
+		width: 50%;
+		padding: 0.5rem 0;
 		margin: 0 1rem 0 0;
+		border: 0.1rem solid $primary-color;
 	}
-}
-.illustration {
-	max-width: 50%;
-	margin: 0 0 0 auto;
-	img {
-		max-width: 100%;
+
+	.email:not(:focus):not(:placeholder-shown):invalid {
+		border-color: red;
+	}
+	.email:not(:focus):not(:placeholder-shown):invalid ~ .error {
+		display: block;
+	}
+
+	.cta {
+		background-color: $cta-background;
+		color: #fff;
+		padding: 0.5rem 1.5rem;
+		font-weight: 700;
+	}
+
+	.error {
+		position: absolute;
+		top: 2.5rem;
+		display: none;
+		color: red;
 	}
 }
