--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,8 +23,8 @@ a {
 h1,
 h2 {
   font-size: 2.5rem;
-  margin: 0 0 1rem 0;
-  padding: 0 5rem 0 0;
+  margin: 0 0 2rem 0;
+  padding: 0 1rem 0 0;
 }
 
 h1,
@@ -35,9 +35,14 @@ a {
 
 p {
   padding: 0 10rem 0 0;
+  margin: 0 0 1rem 0;
 }
 
-img {
+header__logo img,
+.sec1__img img,
+.sec2__img img,
+.sec2__wave img {
+  display: block;
   width: 100%;
 }
 
@@ -164,10 +169,12 @@ header .header__nav a {
 }
 
 .sec1__form .cta {
-  background-color: #3065f8;
   color: #fff;
   padding: 0.5rem 1.5rem;
   font-weight: 700;
+  background-color: #3065f8;
+  -webkit-box-shadow: 5px 5px 14px -7px #000000;
+          box-shadow: 5px 5px 14px -7px #000000;
 }
 
 .sec1__form .error {
@@ -175,5 +182,62 @@ header .header__nav a {
   top: 2.5rem;
   display: none;
   color: red;
+}
+
+.sec2 {
+  background-color: #f6f6fe;
+  padding-bottom: 5rem;
+}
+
+.sec2 .sec2__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 25%;
+  border-bottom: 0.1rem solid #3c9f8f;
+  margin: 0 0 4rem 0;
+}
+
+.sec2 .sec2__link a {
+  color: #3c9f8f;
+}
+
+.sec2 .testimonial {
+  max-width: 60%;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 0.3rem;
+  -webkit-box-shadow: 5px 5px 14px -7px #000000;
+          box-shadow: 5px 5px 14px -7px #000000;
+}
+
+.sec2 .testimonial p {
+  padding: 0;
+  margin: 1rem 0;
+}
+
+.sec2 .testimonial .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sec2 .testimonial .user img {
+  max-width: 12%;
+  border-radius: 50%;
+  margin: 0 1rem 0 0;
+}
+
+.sec2 .testimonial .user p {
+  margin: 0.3rem 0 0 0;
 }
 /*# sourceMappingURL=main.css.map */
