--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -23,8 +23,8 @@ a {
 h1,
 h2 {
 	font-size: 2.5rem;
-	margin: 0 0 1rem 0;
-	padding: 0 5rem 0 0;
+	margin: 0 0 2rem 0;
+	padding: 0 1rem 0 0;
 }
 
 h1,
@@ -35,9 +35,14 @@ a {
 
 p {
 	padding: 0 10rem 0 0;
+	margin: 0 0 1rem 0;
 }
 
-img {
+header__logo img,
+.sec1__img img,
+.sec2__img img,
+.sec2__wave img {
+	display: block;
 	width: 100%;
 }
 
