--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@ $background-color2: hsl(240, 75%, 98%);
 $background-color3: hsl(238, 22%, 44%);
 $background-color4: hsl(243, 87%, 12%);
 $cta-background: hsl(224, 93%, 58%);
+$sec2-link: hsl(170, 45%, 43%);
 
 $rounded: 0.3rem;
 
